# Skeleton

./: .gitignore  README.md  main.py  main_nb.ipynb  pyproject.toml  weights_tmp.joblib
config/: clusterConf.yaml  config.yaml
notebooks/: check.ipynb  test.ipynb
src/: dataset.py  model.py  utils.py
